Добавил изменения для Step_3_admin